--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mind-bloom-fulafia</title>
+    <title>Fulnass</title>
     <link rel="icon" href="/lovable-uploads/9d747166-554d-4138-a753-d06cba952ebe.png" type="image/png">
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
